--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
   --darkGrey: #464D53;
   --caloryCard: #656565;
   --planCard: linear-gradient(210.41deg, #fa5042 1.14%, #ffa739 100.75%);
-  --appColor:  #3c3f45;
+  --appColor: #3c3f45;
 }
 
 .App {
@@ -18,21 +18,22 @@
   gap: 6rem;
   overflow: hidden;
 }
-::-webkit-scrollbar{
+
+::-webkit-scrollbar {
   display: none;
 }
 
-.stroke-text{
-  color:transparent;
-  font-family:Arial, Helvetica, sans-serif;
-  -webkit-text-stroke-width:1px;
+.stroke-text {
+  color: transparent;
+  font-family: Arial, Helvetica, sans-serif;
+  -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: white;
-  
+
 }
 
-.btn{
+.btn {
   background-color: white;
-  padding:0.5rem;
+  padding: 0.5rem;
   font-weight: bold;
   border: 4px solid transparent;
   transition: 300ms all;
@@ -41,7 +42,14 @@
   justify-content: center;
 }
 
-.btn:hover{
+.btn:hover {
   cursor: pointer;
 }
 
+.blur {
+  background: rgba(253, 120, 43, 0.69);
+  position: absolute;
+  border-radius: 50%;
+  filter: blur(150px);
+  z-index: -9
+}
