--- a/src/Components/Plans/Plans.css
+++ b/src/Components/Plans/Plans.css
@@ -73,3 +73,27 @@
 .plans>:nth-child(2)>button {
     color: orange;
 }
+
+.plans-blur-1 {
+    width: 32rem;
+    height: 23rem;
+    top: 6rem;
+    left: 0rem;
+}
+
+.plans-blur-2 {
+    width: 32rem;
+    height: 23rem;
+    top: 10rem;
+    right: 0rem;
+}
+
+@media screen and (max-width: 768px) {
+    .plans {
+        flex-direction: column;
+    }
+
+    .plans:nth-child(2) {
+        transform: none;
+    }
+}
