--- a/src/Components/Programs/Programs.css
+++ b/src/Components/Programs/Programs.css
@@ -1,13 +1,13 @@
-.programs{
+.programs {
     display: flex;
     flex-direction: column;
-    gap:2rem;
-    padding:0.2rem
+    gap: 2rem;
+    padding: 0.2rem
 }
 
-.programs-header{
-    display:flex;
-    gap:5rem;
+.programs-header {
+    display: flex;
+    gap: 5rem;
     font-weight: bold;
     font-size: 3rem;
     justify-content: center;
@@ -16,50 +16,65 @@
     font-style: italic;
 }
 
-.program-categories{
+.program-categories {
     display: flex;
-    gap:2rem;
+    gap: 2rem;
 
 }
 
-.category{
+.category {
     display: flex;
     flex-direction: column;
     background-color: grey;
     gap: 1rem;
     padding: 2rem;
-    color:white;
+    color: white;
     justify-content: center;
 }
 
-.category>:nth-child(1){
-    fill:white;
+.category>:nth-child(1) {
+    fill: white;
     width: 2rem;
     height: 2rem;
 
 }
 
 .category>:nth-child(2) {
-   font-size: 1rem;
-   font-weight: bold;
+    font-size: 1rem;
+    font-weight: bold;
 }
 
 .category>:nth-child(3) {
-   font-size: 0.9rem;
-   line-height: 25px;
+    font-size: 0.9rem;
+    line-height: 25px;
 }
 
-.join-now{
+.join-now {
     display: flex;
     gap: 1rem;
     justify-content: center;
 }
 
-.join-now>img{
+.join-now>img {
     width: 1rem;
 }
 
-.category:hover{
+.category:hover {
     background: var(--planCard);
     cursor: pointer;
+}
+
+@media screen and (max-width:768px) {
+    .programs-header {
+        flex-direction: column;
+        gap: 1rem;
+        font-size: x-large;
+        align-items: center;
+        justify-content: center;
+        margin-top: 2rem;
+    }
+
+    .program-categories {
+        flex-direction: column;
+    }
 }
