--- a/src/Components/Reasons/Reasons.css
+++ b/src/Components/Reasons/Reasons.css
@@ -1,33 +1,33 @@
-.reasons{
+.reasons {
     padding: 0.2rem;
     display: flex;
-    gap:2rem ;
-    
+    gap: 2rem;
+
 }
 
-.left-r{
-    flex:1 1;
+.left-r {
+    flex: 1 1;
     display: grid;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: repeat(3, 1fr);
     gap: 1rem;
     grid-auto-rows: 1fr;
 }
 
-.left-r>img{
+.left-r>img {
     object-fit: cover;
 }
 
-.right-r{
-    flex:1 1;
+.right-r {
+    flex: 1 1;
     text-transform: uppercase;
     gap: 1rem;
     display: flex;
     flex-direction: column;
 }
 
-.left-r>:nth-child(1){
+.left-r>:nth-child(1) {
     width: 12rem;
-    grid-row: 1/3;  
+    grid-row: 1/3;
     /* from total of 3 rows 1 to 3 row space taken */
     height: 28rem;
     grid-column: 1/2;
@@ -35,62 +35,93 @@
 
 .left-r>:nth-child(2) {
     width: auto;
-    height:16rem;
+    height: 16rem;
     grid-column: 2/4;
-   
+
 }
 
 .left-r>:nth-child(3) {
     width: 14rem;
     grid-column: 2/3;
-    grid-row:2
+    grid-row: 2
 }
 
 .left-r>:nth-child(4) {
     width: 10rem;
     grid-row: 2;
     grid-column: 3/4;
-    height:10rem
+    height: 10rem
 }
 
-.right-r>span{
-font-weight: bold;
-color: var(--orange);
+.right-r>span {
+    font-weight: bold;
+    color: var(--orange);
 }
 
-.right-r>div{
-    color:white;
+.right-r>div {
+    color: white;
     font-size: 3rem;
     font-weight: bold;
 }
 
-.details-r{
+.details-r {
     display: flex;
     flex-direction: column;
     gap: 1rem;
 }
 
-.details-r>div{
+.details-r>div {
     display: flex;
     font-size: 1rem;
-    gap:1rem
+    gap: 1rem
 }
 
-.details-r>div>img{
+.details-r>div>img {
     width: 2rem;
     height: 2rem;
 }
 
-.partners{
-    color:var(--gray);
+.partners {
+    color: var(--gray);
     font-weight: normal;
 }
 
-.partners-r{
+.partners-r {
     display: flex;
     gap: 1rem;
 }
 
-.partners-r>img{
+.partners-r>img {
     width: 2.5rem;
+}
+
+@media screen and (max-width:768px) {
+    .reasons {
+        flex-direction: column;
+    }
+
+    .left-r {
+        grid-auto-rows: auto;
+        overflow: hidden;
+    }
+
+    .left-r> :nth-child(1) {
+        width: 7rem;
+        height: 17rem;
+    }
+
+    .left-r> :nth-child(2) {
+        width: 15em;
+        height: 10rem;
+    }
+
+    .left-r> :nth-child(3) {
+        width: 7rem;
+
+    }
+
+    .left-r> :nth-child(4) {
+        width: 7rem;
+        height: 6rem;
+    }
 }
